<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_weather_large_default"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:id="@+id/currently_notification_icon_large"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/currently_notification_icon_large"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textSize="23sp"
            android:text="103°"
            android:id="@+id/currently_notification_temp_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currently_notification_desc"
            android:text="@string/undefined_description_text"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:id="@+id/currently_notification_updated_text"
        android:text="@string/default_time"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:textSize="12sp"
        android:id="@+id/currently_notification_location_text"
        android:layout_toStartOf="@id/currently_notification_updated_text"
        android:text="@string/default_location_text"/>

</RelativeLayout>