<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/card_side_margin"
    android:layout_marginRight="@dimen/card_side_margin"
    android:layout_marginBottom="@dimen/card_bottom_margin"
    android:layout_marginTop="@dimen/first_card_top_margin"
    android:elevation="@dimen/card_elevation"
    app:cardElevation="@dimen/detail_card_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_card_padding">

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:src="@drawable/ic_percip"
            android:id="@+id/detail_percip_icon"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/detail_card_icon_margin_end"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precipitation_title"
            android:layout_toEndOf="@+id/detail_percip_icon"
            android:textSize="@dimen/text_toolbar_size"
            android:id="@+id/detail_percip_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_percip"
            android:textSize="@dimen/detail_card_text_size"
            android:layout_below="@+id/detail_percip_title"
            android:layout_toEndOf="@+id/detail_percip_icon"
            android:id="@+id/detail_card_percip_text"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed"/>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/detail_card_content_divider_width"
            android:layout_height="wrap_content"
            android:id="@+id/percip_detail_card_content_divider"
            android:layout_toEndOf="@id/detail_card_percip_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_percipProb"
            android:textSize="@dimen/detail_card_text_size"
            android:id="@+id/detail_card_percipProb_text"
            android:layout_below="@+id/detail_percip_title"
            android:layout_toEndOf="@id/percip_detail_card_content_divider"
            android:textColor="@color/percipBlue"
            android:textStyle="bold" />
    </RelativeLayout>

</android.support.v7.widget.CardView>