<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/card_side_margin"
    android:layout_marginRight="@dimen/card_side_margin"
    android:layout_marginBottom="@dimen/card_bottom_margin"
    android:layout_marginTop="@dimen/first_card_top_margin"
    android:elevation="@dimen/card_elevation"
    app:cardElevation="@dimen/detail_card_elevation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_card_padding">

        <xyz.eleventhour.averageweather.FadeNetworkImageView
            android:layout_width="@dimen/preview_card_icon_size"
            android:layout_height="@dimen/preview_card_icon_size"
            android:id="@+id/daily_detail_temp_icon"
            android:transitionName="@string/daily_preview_icon_transition_key"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/detail_card_icon_margin_end"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undefined_description_text"
            android:ellipsize="end"
            android:layout_toEndOf="@+id/daily_detail_temp_icon"
            android:textSize="@dimen/text_detail_small_size"
            android:textColor="@color/black"
            android:maxLines="2"
            android:id="@+id/daily_detail_temp_card_desc_title"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/daily_detail_temp_card_desc_title"
            android:layout_toEndOf="@+id/daily_detail_temp_icon"
            android:id="@+id/detail_temp_card_layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/detail_arrow_icon_size"
                    android:layout_height="@dimen/detail_arrow_icon_size"
                    android:src="@drawable/ic_arrow_up"
                    android:id="@+id/detail_temp_card_arrow_up" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_temp_card_hi_text"
                    android:text="@string/default_temp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/detail_card_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_temp_card_hi_time_text"
                    android:text="@string/default_at_time"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/detail_card_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/detail_arrow_icon_size"
                    android:layout_height="@dimen/detail_arrow_icon_size"
                    android:src="@drawable/ic_arrow_down"
                    android:id="@+id/detail_temp_card_arrow_down" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_temp_card_lo_text"
                    android:text="@string/default_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/detail_card_text_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail_temp_card_lo_time_text"
                    android:text="@string/default_at_time"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/detail_card_text_size"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>